# SpacetimeDB-Project

./: .gitignore  LICENSE  Readme.MD  Reame.MD  spacetimedb-api-spec.yaml  todo.md
.github/: copilot-instructions.md
.github/instructions/: Development Templates.instructions.md  SpacetimeDB.instructions.md  SpacetimeDSL.instructions.md  copilot-instructions.md  development_standards.instructions.md  llms_guidance.instructions.md  rls.instructions.md
.github/workflows/: DeployToServer.yml  blank.yml
admin_client/: Cargo.toml
admin_client/src/: main.rs
client/: Cargo.toml  identity_response.json
client-reader/: Cargo.toml
client-reader/src/: main.rs
client-reader/src/module_bindings/: chunk_table.rs  chunk_type.rs  entity_type.rs  internal_entity_position_table.rs  player_entity_type.rs  position_table.rs  stdb_position_table.rs  stdb_position_type.rs  stdb_rotation_type.rs  stdb_transform_type.rs  update_config_type.rs  update_position_reducer.rs  user_type.rs
client/src/: main.rs
client/src/module_bindings/: chunk_type.rs  entity_position_hr_table.rs  entity_position_hr_type.rs  entity_position_lr_table.rs  entity_position_lr_type.rs  entity_table.rs  internal_entity_position_type.rs  mod.rs  player_entity_type.rs  position_type.rs  user_type.rs  (+9 more)
server/: Cargo.toml
server/.cargo/: config.toml
server/src/: lib.rs
server/src/modules/: admin_tools.rs  chat.rs  chats.rs  common.rs  entity.rs  entity_position.rs  entity_positions.rs  entity_rotation.rs  friendship.rs  logging.rs  mod.rs  player.rs  player_status.rs  roles.rs  test_data.rs  util.rs  uuid.rs  weapon.rs
server/src/modules/entity/: entity.rs  entity_position.rs  entity_rotation.rs  mod.rs
server/src/modules/inactive/: admin_tools.rs  friendship.rs  uuid.rs  weapon.rs
server/src/schedulers/: mod.rs  scheduler_chat_archive.rs  scheduler_chunks.rs  scheduler_position_updates.rs  scheduler_rotation_updates.rs
src/module_bindings/: entity_table.rs  mod.rs  player_entity_table.rs  set_position_reducer.rs  update_config_table.rs  update_my_position_reducer.rs  update_position_timer_table.rs
unit-tester/: Cargo.toml
unit-tester/src/: main.rs
