[package]
name = "spacetime-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = { version = "1.2.0", features = ["unstable"] }
log = "0.4"
serde = { version = "1.0.219", features = ["serde_derive"] }
itertools = "=0.14.0"
spacetimedsl_derive = "=0.7.3"
spacetimedsl = "0.7.3"
serde_json = "1.0.140"

[dependencies.uuid] 
version = "1.16.0"
default-features = false
features = [ "serde"] 
