[package]
name = "mouse_game"
description = "The begining of an FPS running on SpaceTimeDB"
homepage = ""
repository = "https://github.com/D34thm0u53/SpacetimeDB-Project"
version = "0.1.0"
edition = "2021"
authors = ["D34thM0u53"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = { version="1.7.0", features = ["unstable"]}
log = "0.4"
glam = "0.30.2"
spacetimedsl = "0.12.0"
lazy_static = "1.5.0"
unicode-normalization = "0.1.24"
