[package]
name = "mouse_game"
description = "A flexible multiplayer game framework running on SpacetimeDB"
homepage = ""
repository = "https://github.com/D34thm0u53/SpacetimeDB-Project"
version = "0.1.0"
edition = "2021"
authors = ["D34thM0u53"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = { version="1.11.1", features = ["unstable"]}
log = "0.4"
glam = "0.30.2"
spacetimedsl = { version = "*" }
lazy_static = "1.5.0"
unicode-normalization = "0.1.24"
