[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
spacetimedb-sdk = "1.11"
hex = "0.4"
rand = "0.9.1"
lazy_static = "1.5.0"
reqwest = { version = "*", features = ["blocking", "json"] }
serde_json = "1.0.142"
tiny_http = "0.12"
url = "2.4"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2.1"
